DSYS-81 - Fixed issue with travel logo not showing, did roadside header.

--- a/src/main/webapp/bundles/fuel/less/layout.less
+++ b/src/main/webapp/bundles/fuel/less/layout.less
@@ -1,10 +1,5 @@
 .header-wrap {
-  @media (@sm) {
-    min-height: 80px; //SM
-  }
-  @media (@md) {
-    min-height: 110px; //MD and LG
-  }
+  min-height: 60px;
 }
 
 .container-fluid {
